<resources>
    <string name="app_name">Matrix Photo</string>
    <string name="doubanmovie">豆瓣电影</string>
    <string name="aboutus">关于我们</string>
    <string name="wapper">透明壁纸</string>
    <!--<string name="app_name">剪 图</string>-->
    <string name="hello_world">测试AudioRecord，实现录音功能</string>
    <string name="error_no_sdcard">没有SD卡，无法存储录音数据</string>
    <string name="error_state_record">正在录音中，请先停止录音</string>
    <string name="error_unknown">无法识别的错误</string>
    <string name="clock">时钟壁纸</string>
    <string name="clocktime">十二时辰时钟壁纸</string>
    <string name="clockrect">方形时钟壁纸</string>
    <string name="color_picker">颜色选择</string>
    <string name="please_enter_msg">请输入文字</string>
    <string name="moren">默认</string>
    <string name="life">生活</string>
    <string name="work">工作</string>
    <string name="other">其它</string>
    <string name="not_start">未开始</string>
    <string name="finish">完成</string>
    <string name="not_finish">过时</string>
    <string name="share_content">分享是一种快乐，感谢有您的陪伴，让我们更加有动力</string>
    <string name="title_content">好好扮演自己的角色，走好人生的每一次彩排，Go for it!</string>
    <string name="load_error">努力加油中 `~`</string>
    <string name="xinhua_dir">新华字典</string>
    <string name="internet">网络</string>
    <string name="more_comment">更多评论</string>
    <string name="comment">评论</string>
    <string name="rebote">客服机器人</string>
    <string name="robote_secretor">小蜜</string>
    <string name="shake_you">抖你一下</string>
    <string name="search">搜索</string>
    <string name="relevancy">相关度</string>
    <string name="most_playing">最多播放</string>
    <string name="most_collection">最多收藏</string>
    <string name="most_members">最多成员</string>
    <string name="most_fans">最多粉丝</string>

    <string name="director">导演</string>
    <string name="photographyer">摄影</string>
    <string name="cutter">剪辑</string>
    <string name="colorist">调色</string>
    <string name="models">机型</string>
    <string name="lens">镜头</string>
    <string name="locations">地点</string>
    <string name="scene">场景</string>
    <string name="resolution">分辨率</string>
    <string name="format">格式</string>
    <string name="coding">编码</string>
    <string name="bitrate">比特率</string>
    <string name="framerate">帧率</string>
    <string name="videosize">大小</string>
    <string name="chose_local">请先选择位置</string>
    <string name="nav_detail">详情</string>
    <string name="nav">导航</string>
    <string name="copy_to_save">已经复制到剪切板</string>
    <string name="copy_to_jianjieban">复制到剪切板</string>
    <string name="secret_circle">小密圈</string>
    <string name="logining">连接中...</string>
    <string name="system_message">你有一条系统消息</string>
    <string-array name="calendar_week">
        <item>日</item>
        <item>一</item>
        <item>二</item>
        <item>三</item>
        <item>四</item>
        <item>五</item>
        <item>六</item>
    </string-array>

</resources>
